--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -773,7 +773,7 @@ ion-icon { display: block; }
 }
 
 .live-match-player::after {
-  content: "LIVE";
+  content: "";
   position: absolute;
   top: 50%;
   left: 50%;
