--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -558,6 +558,12 @@ ion-icon { display: block; }
   text-shadow: -0.5px -0.5px 0 #000, 0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000, 0.5px 0.5px 0 #000;
 }
 
+.hero-title-a { 
+  margin-block: 15px 12px; 
+  background-color: rgb(0, 0, 0, 0.7);
+  padding: 15px;
+}
+
 .hero-title2 { 
   margin-block: 15px 12px; 
   text-shadow: -0.5px -0.5px 0 #000, 0.5px -0.5px 0 #000, -0.5px 0.5px 0 #000, 0.5px 0.5px 0 #000; 
