--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1723,7 +1723,7 @@ ion-icon { display: block; }
   max-height: 100%;
   max-width: 100%;
   user-select: none;
-  pointer-events: none;
+  pointer-events: auto;
   scroll-snap-align: center;
 }
 
