--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1489,7 +1489,7 @@ ion-icon { display: block; }
 
 .image-modal-content {
   display: flex;
-  transition: transform 0.4s ease-in-out;
+  transition: none;
   will-change: transform;
   width: 100%;
   height: 100%;
@@ -1710,7 +1710,7 @@ ion-icon { display: block; }
 
 .image-modal-content {
   display: flex;
-  transition: transform 0.4s ease-in-out;
+  transition: none;
   will-change: transform;
   width: 100%;
   height: 100%;
