--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1666,6 +1666,7 @@ ion-icon { display: block; }
   .hero-text {
     max-width: 60ch;
     margin-inline: auto;
+  }
 
   .hero-text2 {
     max-width: 60ch;
