--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2441,11 +2441,30 @@ ion-icon { display: block; }
   display: flex;
   gap: 5px;
   color: var(--roman-silver);
-  font-size: 12px;
+  height: 24px;
+    width: auto;
+    max-width: 50px;
+    object-fit: contain;
+  flex-wrap: nowrap;
 }
 
 .game-item-platforms ion-icon {
   opacity: 0.7;
+}
+
+.platform-icon {
+  height: 24px;
+  width: auto;
+  max-width: 50px;
+  object-fit: contain;
+}
+
+.game-copies {
+  color: var(--roman-silver);
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
 }
 
 .game-item-status {
