--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1081,7 +1081,8 @@ body {
 
 .game-item-name2 {
   color: var(--white);
-  font-size: var(--fs-4);
+  font-size: var(--fs-6);
+  width: 650px;
   font-weight: var(--fw-500);
   white-space: nowrap;
   overflow: hidden;
@@ -2554,6 +2555,7 @@ body {
 
   .game-item-name2 {
     font-size: 1.15rem;
+    width: auto;
   }
 
   .game-item-status {
