--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,6 @@
   --fs-13: 1.0rem;
   --fs-14: 0.9rem;
   --fs-15: 0.8rem;
-  --fs-15: 0.7rem;
 
   --fw-500: 500;
   --fw-600: 600;
@@ -435,7 +434,7 @@ body {
 
 .navbar.active {
   visibility: visible;
-  max-height: 375px;
+  max-height: 275px;
   transition-duration: 0.5s;
 }
 
@@ -1081,8 +1080,7 @@ body {
 
 .game-item-name2 {
   color: var(--white);
-  font-size: var(--fs-6);
-  width: 650px;
+  font-size: var(--fs-4);
   font-weight: var(--fw-500);
   white-space: nowrap;
   overflow: hidden;
@@ -1174,13 +1172,13 @@ body {
 .tag-filters {
   display: flex;
   flex-direction: column;
-  gap: 0px;
+  gap: 8px;
 }
 
 .tag-filter-item {
   display: flex;
   align-items: center;
-  gap: 5px;
+  gap: 10px;
   cursor: pointer;
   padding: 5px 0;
 }
@@ -2197,6 +2195,12 @@ body {
   background-image: url('../images/index-background.jpg')
 }
 
+@media (max-width: 768px) {
+  #lahtifgc .game-item-name2 {
+    font-size: var(--fs-10);
+  }
+}
+
 @media (min-width: 768px) {
   .container {
     max-width: 720px;
@@ -2242,7 +2246,6 @@ body {
 */
 
 @media (min-width: 992px) {
-  
   #lahtifgc .hero-title {
     text-align: left;
   }
@@ -2384,7 +2387,7 @@ body {
   }
 
   /*
-      MARK:#Max 992px
+      MARK:#Min 992px
   */
 
 }
@@ -2416,11 +2419,6 @@ body {
   }
 
   .game-item-image {
-    width: 80px;
-    height: 30px;
-  }
-
-  .game-item-image2 {
     width: 80px;
     height: 30px;
   }
@@ -2544,18 +2542,12 @@ body {
     height: 23px;
   }
 
-  .game-item-image2 {
-    width: 80px;
-    height: 30px;
-  }
-
   .game-item-name {
     font-size: var(--fs-12);
   }
 
   .game-item-name2 {
-    font-size: 1.15rem;
-    width: auto;
+    font-size: var(--fs-10);
   }
 
   .game-item-status {
@@ -2587,7 +2579,7 @@ body {
   .back-to-list-btn {
     position: static;
     margin-top:-30px !important;
-    margin-left: -310px;
+    margin-left: -360px;
   }
 
   .checkout-title {
